--- a/src/Components/Header/HeaderBlock.module.css
+++ b/src/Components/Header/HeaderBlock.module.css
@@ -1,3 +1,8 @@
+.headerBlockBg{
+    border-bottom: 1px solid rgba(236, 234, 231, 1);
+    width: 100%;
+}
+
 .headerBlock{
     display: flex;
     width: calc(100% - 200px);
@@ -5,6 +10,7 @@
     height: 60px;
     align-items: center;
     justify-content: space-between;
+
 }
 
 .pravCont{
