--- a/src/Pages/CatalogPage/Components/StuffBlock/Components/TovarsList/TovarList.module.css
+++ b/src/Pages/CatalogPage/Components/StuffBlock/Components/TovarsList/TovarList.module.css
@@ -1,4 +1,34 @@
-.tovarList{
+.tovarList {
     display: flex;
     flex-wrap: wrap;
+}
+
+.pageButtons {
+    margin-top: 50px;
+    display: flex;
+    gap: 50px;
+
+    &>div>h1 {
+        width: 40px;
+        padding: 20px;
+        margin: 0;
+        height: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: rgb(117, 117, 207);
+        color: white;
+        border-radius: 50%;
+        transition: all 0.2s;
+
+        &:hover {
+            background-color: rgb(96, 96, 177);
+        }
+
+        &:active{
+            background-color: rgb(90, 90, 134);
+        }
+    }
+
+    &>div {}
 }
