--- a/src/Components/Header/LeftHeaderBlock/LeftHeaderBlock.module.css
+++ b/src/Components/Header/LeftHeaderBlock/LeftHeaderBlock.module.css
@@ -1,6 +1,13 @@
 .leftHeaderBlock{
     display: flex;
+    align-items: center;
+    justify-content: center;
     gap: 60px;
+
+    img{
+        height: 100%;
+        width: 100%;
+    }
 }
 
 .textCatalog{
